# cl2

./: .gitignore  README.md  cl-tool  clon  clon.cmd  nest.cl  package.json  run-tests.cl
compiler/lib/: README.md  cl2-compiler.js  features.md  forms.js  generate-parser.sh  lang-parser.js  lang.pegjs  test-compiler.js
compiler/plugins/: README.md
compiler/tool/: README.md  cl-tool.js  utils.js
defaults/: README.md  tree.cl
dev-docs/: compiling-modes.md  dense.txt  design-decisions.md  facts.txt  features-compiler.md  features-modules.md  features.md  ideas.md  impressions.md  macros.md  misli.txt  modules.md  notes.md  open-questions.md  others.md  plan.md  prob-in.md  reason.md  syntax.md  todo.md
dev-docs/subprojects/: macros.md  mixins.md  tree.md
doc/: README.md  clon-config.md  commands.md  electron.md  install.md  modules.md  nodejs.md  web.md
doc/syntax-coloring/: README.md
examples/websockets/: README.md  main.cl  package.json
expreriment/non-local/: README.md
lib/: default.cl  std.cl
lib/dom/: dom.cl
platform/cpp/: README.md  clon.mjs  lang-features.md
platform/cpp/tests/hello/: CMakeLists.txt  build_debian.sh  main.cl
runtime/: cl2-browser.js  cl2.js
stdlib/: default-transforms.cl  default.cl  main.cl  os.cl  parallel.cl
stdlib/defaults/: README.md  default.cl
tests.official/base_syntax/: main.cl
tests.official/children/: main.cl
tests.official/cofunc/: main.cl
tests.official/cofunc_syntax/: main.cl
tests.official/coherent/: main.cl
tests.official/coherent-2/: main.cl
tests.official/defaults/: main.cl
(+222 files in other folders)
